bk_ida/gccida/c3/mark_used_reg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_used_reg/src/flow.c:3980:35: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v32 = rtuint + ( ( unsigned int)( mode_class_0[v6] - 5) < 2); 
                                  ^~~~~~~~~~~~
                                  mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_used_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_used_reg/src/obj/flow.o] Error 1
